// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`First List cards UI renders as expected renders the UI as expected 1`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        First card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`First List cards UI renders as expected renders the UI as expected 2`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Second card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`First List cards UI renders as expected renders the UI as expected 3`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Fifth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`First List cards UI renders as expected renders the UI as expected 4`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Sixth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`First List cards UI renders as expected renders the UI as expected 5`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Seventh card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`First List cards UI renders as expected renders the UI as expected 6`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Tenth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`First List cards UI renders as expected renders the UI as expected 7`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Twelfth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`First List cards UI renders as expected renders the UI as expected 8`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Thirteenth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Fourth List cards UI renders as expected renders the UI as expected 1`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Twelfth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Fourth List cards UI renders as expected renders the UI as expected 2`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Thirteenth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Second List cards UI renders as expected renders the UI as expected 1`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Second card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Second List cards UI renders as expected renders the UI as expected 2`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Third card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Second List cards UI renders as expected renders the UI as expected 3`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Fourth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Second List cards UI renders as expected renders the UI as expected 4`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Sixth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Second List cards UI renders as expected renders the UI as expected 5`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Eighth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Second List cards UI renders as expected renders the UI as expected 6`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Ninth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Second List cards UI renders as expected renders the UI as expected 7`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Eleventh card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 1`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        First card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 2`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Second card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 3`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Third card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 4`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Fourth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 5`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Fifth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 6`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Sixth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 7`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Seventh card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 8`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Eighth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 9`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Ninth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 10`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Tenth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 11`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Eleventh card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 12`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Twelfth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;

exports[`Third List cards UI renders as expected renders the UI as expected 13`] = `
<div
  className="cardContainer"
>
  <div
    className="cardContentItem cardContentFirstItems"
  >
    <div
      className="cardContentFirstItemsPeta"
    >
      <h3
        className="cardHeader"
      >
        Thirteenth card
      </h3>
    </div>
    <div
      className="cardContentFirstItemsPeta"
    >
      <button
        className="cardButton"
      >
        delete
      </button>
    </div>
  </div>
  <div
    className="cardContentItem"
  >
    <div
      className="cardContentSecondItem"
    >
      <p
        className="cardContent"
      >
        lorem ipsum
      </p>
    </div>
  </div>
</div>
`;
